--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ClassAssignment">
-        <activity android:name=".ClassTask4">
+        <activity android:name=".ClassTask5">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClassTask3"></activity>
+        <activity android:name=".ClassTask4"></activity>
+        <activity android:name=".ClassTask3" />
         <activity android:name=".ClassTask2" />
         <activity android:name=".ClassTask1" />
         <activity android:name=".MainActivity" />
