--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,21 +20,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ClassAssignment">
-        <activity android:name=".ClassTask9">
+        <activity android:name=".ClassTask9"></activity>
+        <activity android:name=".ClassTask7"></activity>
+        <activity android:name=".ClassTask5" />
+        <activity android:name=".ClassTask4n6" />
+        <activity android:name=".ClassTask3" />
+        <activity android:name=".ClassTask2" />
+        <activity android:name=".ClassTask1" />
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ClassTask7">
-        </activity>
-        <activity android:name=".ClassTask5" />
-        <activity android:name=".ClassTask4n6" />
-        <activity android:name=".ClassTask3" />
-        <activity android:name=".ClassTask2" />
-        <activity android:name=".ClassTask1" />
-        <activity android:name=".MainActivity" />
 
         <receiver android:name=".ClassTask8">
             <intent-filter>
